# llm_bot

./: README.md  package.json  pyproject.toml  requirements.txt  setup.py
llm_bot/: api.py  hooks.py  modules.txt
llm_bot/llm_bot/doctype/llm_bot_settings/: llm_bot_settings.json  llm_bot_settings.py  test_llm_bot_settings.py
llm_bot/llm_bot/doctype/llm_chat_settings/: llm_chat_settings.js  llm_chat_settings.json  llm_chat_settings.py  test_llm_chat_settings.py
llm_bot/llm_bot/page/ask_llm/: ask_llm.js  ask_llm.json
llm_bot/llm_bot/page/llm_bot/: llm_bot.js  llm_bot.json
llm_bot/llm_bot/workspace/talk_to_llm/: talk_to_llm.json
llm_bot/public/js/: ChatView.jsx  app_customizations.js  llmbot_ui.bundle.jsx
