[project]
name = "llm_chat"
authors = [
    { name = "yiouyou", email = "zhuosong@gmail.com"}
]
description = "Chat with LLM"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "langchain~=0.1.11",
    "langchain-openai~=0.0.8",
    "langchain-mistralai~=0.0.5",
    "langchain-community~=0.0.27"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
